SuperEncoder Java Beans